--- a/src/components/layout/Tutorial.css
+++ b/src/components/layout/Tutorial.css
@@ -3,7 +3,7 @@
   height: 100%;
   display: flex;
   justify-content: center;
-  position: absolute;
+  position: fixed;
 
   top: 0;
   left: 0;
